--- a/Chow restaurant/theme/contact.html
+++ b/Chow restaurant/theme/contact.html
@@ -40,12 +40,12 @@
               <a class="nav-link" href="recipes.html">Recipes</a>
             </li>
             <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="services.html" id="dropdown04" data-toggle="dropdown"
-                aria-haspopup="true" aria-expanded="false">Services</a>
+              <a class="nav-link dropdown-toggle" href="#" id="dropdown04" data-toggle="dropdown" aria-haspopup="true"
+                aria-expanded="false">Services</a>
               <div class="dropdown-menu" aria-labelledby="dropdown04">
-                <a class="dropdown-item" href="services.html">Food Catering</a>
-                <a class="dropdown-item" href="services.html">Drink &amp; Beverages</a>
-                <a class="dropdown-item" href="services.html">Wedding &amp; Birthday</a>
+                <a class="dropdown-item" href="food.html">Food Catering</a>
+                <a class="dropdown-item" href="drinks.html">Drink &amp; Beverages</a>
+                <a class="dropdown-item" href="weddings.html">Wedding &amp; Birthday</a>
               </div>
             </li>
             <li class="nav-item">
@@ -66,13 +66,13 @@
   </header>
 
   <div class="slider-wrap no-slanted">
-    <div class="slider-item" style="background-image: url('img/hero_1.jpg');">
+    <div class="slider-item" style="background-image: url('img/contact.jpg');">
       <div class="container">
         <div class="row slider-text align-items-center justify-content-center">
           <div class="col-md-8 text-center col-sm-12 ">
-            <h1 data-aos="fade-up">Contact CHOW</h1>
-            <p class="mb-5" data-aos="fade-up" data-aos-delay="100">Handcrafted with love by <a
-                href="https://free-template.co/" target="_blank">Free-Template.co</a></p>
+            <h1 data-aos="fade-up">Contact us</h1>
+            <p class="mb-5" data-aos="fade-up" data-aos-delay="100">We are always happy to hear from our customers and
+              visitors and will do our best to assist you in any way we can.</p>
             <p data-aos="fade-up" data-aos-delay="200"><a href="#" class="btn btn-white btn-outline-white">Get
                 Started</a></p>
           </div>
@@ -132,15 +132,14 @@
             </p>
             <p class="d-flex">
               <span class="ion-android-mail icon mr-5"></span>
-              <span><a href="https://preview.colorlib.com/cdn-cgi/l/email-protection" class="__cf_email__"
-                  data-cfemail="8fe6e1e9e0cff6e0fafdebe0e2eee6e1a1ece0e2">[email&#160;protected]</a></span>
+              <span>pradeepl220220@gmail.com </span>
             </p>
           </div>
         </div>
       </div>
     </div>
   </section>
-  <section class="section bg-light pt-0 relative-higher">
+ <!-- <section class="section bg-light pt-0 relative-higher">
     <div class="clearfix mb-5 pb-5 ">
       <div class="container-fluid">
         <div class="row" data-aos="fade">
@@ -160,9 +159,9 @@
                   impeccable service. The flavors and presentation of the dishes were outstanding, and the staff made us
                   feel welcomed and comfortable throughout the meal. I can't wait to go back ! &rdquo;</p>
                 <div class="d-flex author">
-                  <img src="img/person_1.jpg" alt="" class="mr-4">
+                  <img src="img/dummy-image.jpg" alt="" class="mr-4">
                   <div class="author-info">
-                    <h4>Mellisa Howard</h4>
+                    <h4>Mokshaditya</h4>
                     <p>Customer</p>
                   </div>
                 </div>
@@ -174,9 +173,9 @@
                   impeccable service. The flavors and presentation of the dishes were outstanding, and the staff made us
                   feel welcomed and comfortable throughout the meal. I can't wait to go back ! &rdquo;</p>
                 <div class="d-flex author">
-                  <img src="img/person_2.jpg" alt="" class="mr-4">
+                  <img src="img/dummy-image.jpg" alt="" class="mr-4">
                   <div class="author-info">
-                    <h4>Mike Richardson</h4>
+                    <h4>Ishan kishan</h4>
                     <p>Customer</p>
                   </div>
                 </div>
@@ -188,9 +187,9 @@
                   impeccable service. The flavors and presentation of the dishes were outstanding, and the staff made us
                   feel welcomed and comfortable throughout the meal. I can't wait to go back ! &rdquo;</p>
                 <div class="d-flex author">
-                  <img src="img/person_3.jpg" alt="" class="mr-4">
+                  <img src="img/Dummy-Frau.jpg" alt="" class="mr-4">
                   <div class="author-info">
-                    <h4>Charles White</h4>
+                    <h4>Krithika</h4>
                     <p>Customer</p>
                   </div>
                 </div>
@@ -200,7 +199,7 @@
         </div>
       </div>
     </div>
-  </section>
+  </section> -->
   <footer class="site-footer" role="contentinfo">
     <div class="container mb-5">
       <div class="row justify-content-center">
@@ -209,8 +208,7 @@
             <div class="col-md-12 mb-3">
               <h3>Subscribe Newsletter</h3>
               <p>Subscribe to our newsletter to stay up-to-date on the latest news, updates, and promotions happening at
-                CHOW. By subscribing, you'll receive exclusive offers, be the first to know about new menu
-                items, and learn about upcoming events.</p>
+                CHOW. </p>
             </div>
             <form action="#" class="col-12 mb-5">
               <div class="row align-items-center">
