--- a/Chow restaurant/theme/index.html
+++ b/Chow restaurant/theme/index.html
@@ -40,12 +40,12 @@
               <a class="nav-link" href="recipes.html">Recipes</a>
             </li>
             <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="services.html" id="dropdown04" data-toggle="dropdown"
+              <a class="nav-link dropdown-toggle" href="#" id="dropdown04" data-toggle="dropdown"
                 aria-haspopup="true" aria-expanded="false">Services</a>
               <div class="dropdown-menu" aria-labelledby="dropdown04">
-                <a class="dropdown-item" href="services.html">Food Catering</a>
-                <a class="dropdown-item" href="services.html">Drink &amp; Beverages</a>
-                <a class="dropdown-item" href="services.html">Wedding &amp; Birthday</a>
+                <a class="dropdown-item" href="food.html">Food Catering</a>
+                <a class="dropdown-item" href="drinks.html">Drink &amp; Beverages</a>
+                <a class="dropdown-item" href="weddings.html">Wedding &amp; Birthday</a>
               </div>
             </li>
             <li class="nav-item">
@@ -67,7 +67,7 @@
 
   <div class="slider-wrap">
     <section class="home-slider owl-carousel">
-      <div class="slider-item" style="background-image: url('img/hero_1.jpg');">
+      <div class="slider-item" style="background-image: url('img/home-2.jpg');">
         <div class="container">
           <div class="row slider-text align-items-center justify-content-center">
             <div class="col-md-8 text-center col-sm-12 ">
@@ -80,7 +80,7 @@
           </div>
         </div>
       </div>
-      <div class="slider-item" style="background-image: url('img/hero_2.jpg');">
+      <div class="slider-item" style="background-image: url('img/home-1.jpg');">
         <div class="container">
           <div class="row slider-text align-items-center justify-content-center">
             <div class="col-md-8 text-center col-sm-12 ">
@@ -102,23 +102,23 @@
         <div class="col-md-6 mb-4 mb-lg-0 col-lg-3 text-left service-block" data-aos="fade-up" data-aos-delay="">
           <span class="wrap-icon"><span class="flaticon-dinner d-block mb-4"></span></span>
           <h3 class="mb-2 text-primary">Enjoy Eating</h3>
-          <p>A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
+          <p>Enjoying your food is an important aspect of eating. Savoring flavors, textures, and aromas can enhance the overall experience and promote mindfulness during mealtime.</p>
         </div>
         <div class="col-md-6 mb-4 mb-lg-0 col-lg-3 text-left service-block" data-aos="fade-up" data-aos-delay="100">
           <span class="wrap-icon"><span class="flaticon-fish d-block mb-4"></span></span>
           <h3 class="mb-2 text-primary">Fresh Sea Foods</h3>
-          <p>A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
+          <p>It is a rich source of protein, omega-3 fatty acids, and other essential nutrients, making it a healthy dietary choice.</p>
         </div>
         <div class="col-md-6 mb-4 mb-lg-0 col-lg-3 text-left service-block" data-aos="fade-up" data-aos-delay="200">
           <span class="wrap-icon"><span
               class="flaticon-hot-coffee-rounded-cup-on-a-plate-from-side-view d-block mb-4"></span></span>
           <h3 class="mb-2 text-primary">Cup of Coffees</h3>
-          <p>A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
+          <p>Coffee can improve mental alertness and mood, and has been enjoyed for centuries as a social drink and a morning pick-me-up.</p>
         </div>
         <div class="col-md-6 mb-4 mb-lg-0 col-lg-3 text-left service-block" data-aos="fade-up" data-aos-delay="300">
           <span class="wrap-icon"><span class="flaticon-meat d-block mb-4"></span></span>
           <h3 class="mb-2 text-primary">Meat Eaters</h3>
-          <p>A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
+          <p>Meat is a good source of protein and other nutrients, excessive consumption has been linked to health issues, and ethical concerns have led many to reduce or eliminate their meat intake.</p>
         </div>
       </div>
     </div>
@@ -313,9 +313,9 @@
                   impeccable service. The flavors and presentation of the dishes were outstanding, and the staff made us
                   feel welcomed and comfortable throughout the meal. I can't wait to go back ! &rdquo;</p>
                 <div class="d-flex author">
-                  <img src="img/person_1.jpg" alt="" class="mr-4">
+                  <img src="img/dummy-image.jpg" alt="" class="mr-4">
                   <div class="author-info">
-                    <h4>Mellisa Howard</h4>
+                    <h4>Mokshaditya</h4>
                     <p>Customer</p>
                   </div>
                 </div>
@@ -327,9 +327,9 @@
                   impeccable service. The flavors and presentation of the dishes were outstanding, and the staff made us
                   feel welcomed and comfortable throughout the meal. I can't wait to go back ! &rdquo;</p>
                 <div class="d-flex author">
-                  <img src="img/person_2.jpg" alt="" class="mr-4">
+                  <img src="img/dummy-image.jpg" alt="" class="mr-4">
                   <div class="author-info">
-                    <h4>Mike Richardson</h4>
+                    <h4>Ishan kishan</h4>
                     <p>Customer</p>
                   </div>
                 </div>
@@ -341,9 +341,9 @@
                   impeccable service. The flavors and presentation of the dishes were outstanding, and the staff made us
                   feel welcomed and comfortable throughout the meal. I can't wait to go back ! &rdquo;</p>
                 <div class="d-flex author">
-                  <img src="img/person_3.jpg" alt="" class="mr-4">
+                  <img src="img/Dummy-Frau.jpg" alt="" class="mr-4">
                   <div class="author-info">
-                    <h4>Charles White</h4>
+                    <h4>Krithika</h4>
                     <p>Customer</p>
                   </div>
                 </div>
@@ -406,8 +406,7 @@
             <div class="col-md-12 mb-3">
               <h3>Subscribe Newsletter</h3>
               <p>Subscribe to our newsletter to stay up-to-date on the latest news, updates, and promotions happening at
-                CHOW. By subscribing, you'll receive exclusive offers, be the first to know about new menu
-                items, and learn about upcoming events.</p>
+                CHOW.</p>
             </div>
             <form action="#" class="col-12 mb-5">
               <div class="row align-items-center">
