--- a/Chow restaurant/theme/news.html
+++ b/Chow restaurant/theme/news.html
@@ -40,12 +40,12 @@
               <a class="nav-link" href="recipes.html">Recipes</a>
             </li>
             <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="services.html" id="dropdown04" data-toggle="dropdown"
+              <a class="nav-link dropdown-toggle" href="#" id="dropdown04" data-toggle="dropdown"
                 aria-haspopup="true" aria-expanded="false">Services</a>
               <div class="dropdown-menu" aria-labelledby="dropdown04">
-                <a class="dropdown-item" href="services.html">Food Catering</a>
-                <a class="dropdown-item" href="services.html">Drink &amp; Beverages</a>
-                <a class="dropdown-item" href="services.html">Wedding &amp; Birthday</a>
+                <a class="dropdown-item" href="food.html">Food Catering</a>
+                <a class="dropdown-item" href="drinks.html">Drink &amp; Beverages</a>
+                <a class="dropdown-item" href="weddings.html">Wedding &amp; Birthday</a>
               </div>
             </li>
             <li class="nav-item">
@@ -66,11 +66,11 @@
   </header>
 
   <div class="slider-wrap">
-    <div class="slider-item" style="background-image: url('img/hero_1.jpg');">
+    <div class="slider-item" style="background-image: url('img/blog\ \(2\).jpg');">
       <div class="container">
         <div class="row slider-text align-items-center justify-content-center">
           <div class="col-md-8 text-center col-sm-12 ">
-            <h1 data-aos="fade-up">CHOW Blogs</h1>
+            <h1 data-aos="fade-up">Our Blogs</h1>
             <p class="mb-5" data-aos="fade-up" data-aos-delay="100">where we share our love for food and provide our
               readers with culinary inspiration, recipes, and behind-the-scenes glimpses into our restaurant.</p>
             <p data-aos="fade-up" data-aos-delay="200"><a href="#" class="btn btn-white btn-outline-white">Get
@@ -169,7 +169,7 @@
           </div>
         </div>
       </div>
-     <!-- <div class="row mt-5" data-aos="fade-up">
+      <!-- <div class="row mt-5" data-aos="fade-up">
         <div class="col-12 text-center">
           <a href="#" class="p-3">1</a>
           <a href="#" class="p-3">2</a>
@@ -188,8 +188,7 @@
             <div class="col-md-12 mb-3">
               <h3>Subscribe Newsletter</h3>
               <p>Subscribe to our newsletter to stay up-to-date on the latest news, updates, and promotions happening at
-                CHOW. By subscribing, you'll receive exclusive offers, be the first to know about new menu
-                items, and learn about upcoming events.</p>
+                CHOW. </p>
             </div>
             <form action="#" class="col-12 mb-5">
               <div class="row align-items-center">
