--- a/Chow restaurant/theme/single.html
+++ b/Chow restaurant/theme/single.html
@@ -40,12 +40,12 @@
               <a class="nav-link" href="recipes.html">Recipes</a>
             </li>
             <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="services.html" id="dropdown04" data-toggle="dropdown"
+              <a class="nav-link dropdown-toggle" href="#" id="dropdown04" data-toggle="dropdown"
                 aria-haspopup="true" aria-expanded="false">Services</a>
               <div class="dropdown-menu" aria-labelledby="dropdown04">
-                <a class="dropdown-item" href="services.html">Food Catering</a>
-                <a class="dropdown-item" href="services.html">Drink &amp; Beverages</a>
-                <a class="dropdown-item" href="services.html">Wedding &amp; Birthday</a>
+                <a class="dropdown-item" href="food.html">Food Catering</a>
+                <a class="dropdown-item" href="drinks.html">Drink &amp; Beverages</a>
+                <a class="dropdown-item" href="weddings.html">Wedding &amp; Birthday</a>
               </div>
             </li>
             <li class="nav-item">
@@ -283,8 +283,7 @@
             <div class="col-md-12 mb-3">
               <h3>Subscribe Newsletter</h3>
               <p>Subscribe to our newsletter to stay up-to-date on the latest news, updates, and promotions happening at
-                CHOW. By subscribing, you'll receive exclusive offers, be the first to know about new menu
-                items, and learn about upcoming events.</p>
+                CHOW. </p>
             </div>
             <form action="#" class="col-12 mb-5">
               <div class="row align-items-center">
