--- a/Chow restaurant/theme/weddings.html
+++ b/Chow restaurant/theme/weddings.html
@@ -66,13 +66,12 @@
   </header>
 
   <div class="slider-wrap">
-    <div class="slider-item" style="background-image: url('img/hero_1.jpg');">
+    <div class="slider-item" style="background-image: url('img/wedding.jpg');">
       <div class="container">
         <div class="row slider-text align-items-center justify-content-center">
           <div class="col-md-8 text-center col-sm-12 ">
-            <h1 data-aos="fade-up">CHOW Services</h1>
-            <p class="mb-5" data-aos="fade-up" data-aos-delay="100">Lorem ipsum dolor sit amet, consectetur adipisicing
-              elit. Sapiente et sed quasi.</p>
+            <h1 data-aos="fade-up">Wedding & Birthdays</h1>
+            <p class="mb-5" data-aos="fade-up" data-aos-delay="100">Weddings and birthdays are two significant events in people's lives that are often celebrated with food, drinks, and other forms of entertainment.</p>
             <p data-aos="fade-up" data-aos-delay="200"><a href="#" class="btn btn-white btn-outline-white">Get
                 Started</a></p>
           </div>
@@ -108,12 +107,12 @@
         <div class="col-md-6 mb-4 mb-lg-5 col-lg-3 text-left service-block" data-aos="fade-up" data-aos-delay="">
           <span class="wrap-icon"><span class="flaticon-cook d-block mb-4"></span></span>
           <h3 class="mb-2 text-primary">Free Hot Soup</h3>
-          <p>A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
+          <p>Hot soup is a comforting and nourishing dish that is often enjoyed during cold weather or when feeling unwell. It can be made with a variety of ingredients, such as vegetables, meats, or grains, and can be customized to suit different tastes and dietary needs.</p>
         </div>
         <div class="col-md-6 mb-4 mb-lg-5 col-lg-3 text-left service-block" data-aos="fade-up" data-aos-delay="100">
           <span class="wrap-icon"><span class="flaticon-alcohol d-block mb-4"></span></span>
           <h3 class="mb-2 text-primary">Drinks &amp; Beverages</h3>
-          <p>A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
+          <p>Drinks and beverages refer to any liquid consumed for the purpose of quenching thirst or enjoyment. </p>
         </div>
         <div class="col-md-6 mb-4 mb-lg-5 col-lg-3 text-left service-block" data-aos="fade-up" data-aos-delay="300">
           <span class="wrap-icon"><span class="flaticon-meat d-block mb-4"></span></span>
