--- a/Chow restaurant/theme/about.html
+++ b/Chow restaurant/theme/about.html
@@ -40,12 +40,12 @@
               <a class="nav-link" href="recipes.html">Recipes</a>
             </li>
             <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="services.html" id="dropdown04" data-toggle="dropdown"
+              <a class="nav-link dropdown-toggle" href="#" id="dropdown04" data-toggle="dropdown"
                 aria-haspopup="true" aria-expanded="false">Services</a>
               <div class="dropdown-menu" aria-labelledby="dropdown04">
-                <a class="dropdown-item" href="services.html">Food Catering</a>
-                <a class="dropdown-item" href="services.html">Drink &amp; Beverages</a>
-                <a class="dropdown-item" href="services.html">Wedding &amp; Birthday</a>
+                <a class="dropdown-item" href="food.html">Food Catering</a>
+                <a class="dropdown-item" href="drinks.html">Drink &amp; Beverages</a>
+                <a class="dropdown-item" href="weddings.html">Wedding &amp; Birthday</a>
               </div>
             </li>
             <li class="nav-item">
@@ -66,7 +66,7 @@
   </header>
 
   <div class="slider-wrap no-slanted">
-    <div class="slider-item" style="background-image: url('img/hero_1.jpg');">
+    <div class="slider-item" style="background-image: url('img/about.jpg');">
       <div class="container">
         <div class="row slider-text align-items-center justify-content-center">
           <div class="col-md-8 text-center col-sm-12 ">
@@ -141,54 +141,54 @@
         <div class="major-caousel js-carousel-1 owl-carousel">
           <div>
             <div class="media d-block media-custom text-center">
-              <a href="#"><img src="img/person_1.jpg" alt="Image Placeholder" class="img-fluid"></a>
+              <a href="#"><img src="img/dummy-image.jpg" alt="Image Placeholder" class="img-fluid"></a>
               <div class="media-body">
-                <h3 class="mt-0 text-black">Mellisa Howard</h3>
+                <h3 class="mt-0 text-black">Mokshaditya</h3>
                 <p class="lead">Chef</p>
               </div>
             </div>
           </div>
           <div>
             <div class="media d-block media-custom text-center">
-              <a href="#"><img src="img/person_2.jpg" alt="Image Placeholder" class="img-fluid"></a>
+              <a href="#"><img src="img/dummy-image.jpg" alt="Image Placeholder" class="img-fluid"></a>
               <div class="media-body">
-                <h3 class="mt-0 text-black">Mike Richardson</h3>
+                <h3 class="mt-0 text-black">Ishan kishan</h3>
                 <p class="lead">Chef</p>
               </div>
             </div>
           </div>
           <div>
             <div class="media d-block media-custom text-center">
-              <a href="#"><img src="img/person_3.jpg" alt="Image Placeholder" class="img-fluid"></a>
+              <a href="#"><img src="img/Dummy-Frau.jpg" alt="Image Placeholder" class="img-fluid"></a>
               <div class="media-body">
-                <h3 class="mt-0 text-black">Charles White</h3>
+                <h3 class="mt-0 text-black">Krithika</h3>
                 <p class="lead">Chef</p>
               </div>
             </div>
           </div>
           <div>
             <div class="media d-block media-custom text-center">
-              <a href="#"><img src="img/person_1.jpg" alt="Image Placeholder" class="img-fluid"></a>
+              <a href="#"><img src="img/dummy-image.jpg" alt="Image Placeholder" class="img-fluid"></a>
               <div class="media-body">
-                <h3 class="mt-0 text-black">Mellisa Howard</h3>
+                <h3 class="mt-0 text-black">Mokshaditya</h3>
                 <p class="lead">Chef</p>
               </div>
             </div>
           </div>
           <div>
             <div class="media d-block media-custom text-center">
-              <a href="#"><img src="img/person_2.jpg" alt="Image Placeholder" class="img-fluid"></a>
+              <a href="#"><img src="img/dummy-image.jpg" alt="Image Placeholder" class="img-fluid"></a>
               <div class="media-body">
-                <h3 class="mt-0 text-black">Mike Richardson</h3>
+                <h3 class="mt-0 text-black">Ishan kishan</h3>
                 <p class="lead">Chef</p>
               </div>
             </div>
           </div>
           <div>
             <div class="media d-block media-custom text-center">
-              <a href="#"><img src="img/person_3.jpg" alt="Image Placeholder" class="img-fluid"></a>
+              <a href="#"><img src="img/Dummy-Frau.jpg" alt="Image Placeholder" class="img-fluid"></a>
               <div class="media-body">
-                <h3 class="mt-0 text-black">Charles White</h3>
+                <h3 class="mt-0 text-black">Krithika</h3>
                 <p class="lead">Chef</p>
               </div>
             </div>
@@ -206,8 +206,7 @@
             <div class="col-md-12 mb-3">
               <h3>Subscribe Newsletter</h3>
               <p>Subscribe to our newsletter to stay up-to-date on the latest news, updates, and promotions happening at
-                CHOW. By subscribing, you'll receive exclusive offers, be the first to know about new menu
-                items, and learn about upcoming events.</p>
+                CHOW.</p>
             </div>
             <form action="#" class="col-12 mb-5">
               <div class="row align-items-center">
