--- a/Chow restaurant/theme/recipes.html
+++ b/Chow restaurant/theme/recipes.html
@@ -40,12 +40,12 @@
               <a class="nav-link active" href="recipes.html">Recipes</a>
             </li>
             <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="services.html" id="dropdown04" data-toggle="dropdown"
-                aria-haspopup="true" aria-expanded="false">Services</a>
+              <a class="nav-link dropdown-toggle" href="#" id="dropdown04" data-toggle="dropdown" aria-haspopup="true"
+                aria-expanded="false">Services</a>
               <div class="dropdown-menu" aria-labelledby="dropdown04">
-                <a class="dropdown-item" href="services.html">Food Catering</a>
-                <a class="dropdown-item" href="services.html">Drink &amp; Beverages</a>
-                <a class="dropdown-item" href="services.html">Wedding &amp; Birthday</a>
+                <a class="dropdown-item" href="food.html">Food Catering</a>
+                <a class="dropdown-item" href="drinks.html">Drink &amp; Beverages</a>
+                <a class="dropdown-item" href="weddings.html">Wedding &amp; Birthday</a>
               </div>
             </li>
             <li class="nav-item">
@@ -66,13 +66,14 @@
   </header>
 
   <div class="slider-wrap">
-    <div class="slider-item" style="background-image: url('img/hero_1.jpg');">
+    <div class="slider-item" style="background-image: url('img/recipe.jpg');">
       <div class="container">
         <div class="row slider-text align-items-center justify-content-center">
           <div class="col-md-8 text-center col-sm-12 ">
-            <h1 data-aos="fade-up">CHOW Recipes</h1>
-            <p class="mb-5" data-aos="fade-up" data-aos-delay="100">Lorem ipsum dolor sit amet, consectetur adipisicing
-              elit. Sapiente et sed quasi.</p>
+            <h1 data-aos="fade-up">Our Recipes</h1>
+            <p class="mb-5" data-aos="fade-up" data-aos-delay="100">A recipe is a set of instructions that describe how
+              to prepare a particular dish or beverage, including a list of ingredients, cooking techniques, and serving
+              suggestions.</p>
             <p data-aos="fade-up" data-aos-delay="200"><a href="#" class="btn btn-white btn-outline-white">Get
                 Started</a></p>
           </div>
@@ -178,8 +179,7 @@
             <div class="col-md-12 mb-3">
               <h3>Subscribe Newsletter</h3>
               <p>Subscribe to our newsletter to stay up-to-date on the latest news, updates, and promotions happening at
-                CHOW. By subscribing, you'll receive exclusive offers, be the first to know about new menu
-                items, and learn about upcoming events.</p>
+                CHOW.</p>
             </div>
             <form action="#" class="col-12 mb-5">
               <div class="row align-items-center">
@@ -200,7 +200,8 @@
         <div class="col-md-4 mb-5">
           <h3>About Us</h3>
           <p class="mb-5">We're a team of passionate foodies dedicated to delivering an exceptional dining experience to
-            every guest. Our story began with a vision to create a restaurant that celebrates the art of cooking and hospitality.</p>
+            every guest. Our story began with a vision to create a restaurant that celebrates the art of cooking and
+            hospitality.</p>
           <ul class="list-unstyled footer-link d-flex footer-social">
             <li><a href="#" class="p-2"><span class="fa fa-twitter"></span></a></li>
             <li><a href="#" class="p-2"><span class="fa fa-facebook"></span></a></li>
@@ -221,7 +222,8 @@
                 <span>Bangalore, Karnataka</span>
               </li>
               <li class="d-block"><span class="d-block text-black">Phone:</span><span>+91 963 230 5984</span></li>
-              <li class="d-block"><span class="d-block text-black">Email:</span><span>pradeepl220220@gmail.com</span></li>
+              <li class="d-block"><span class="d-block text-black">Email:</span><span>pradeepl220220@gmail.com</span>
+              </li>
             </ul>
           </div>
         </div>
