--- a/Chow/blog.html
+++ b/Chow/blog.html
@@ -70,7 +70,7 @@
       <div class="container">
         <div class="row slider-text align-items-center justify-content-center">
           <div class="col-md-8 text-center col-sm-12 ">
-            <h1 data-aos="fade-up">Our Blogs</h1>
+            <h1 data-aos="fade-up">Blogs</h1>
             <p class="mb-5" data-aos="fade-up" data-aos-delay="100">where we share our love for food and provide our
               readers with culinary inspiration, recipes, and behind-the-scenes glimpses into our restaurant.</p>
             <p data-aos="fade-up" data-aos-delay="200"><a href="#" class="btn btn-white btn-outline-white">Get
@@ -86,65 +86,9 @@
       <div class="row">
         <div class="col-md-6" data-aos="fade-up" data-aos-delay="100">
           <div class="blog d-block">
-            <a class="bg-image d-block" href="single.html" style="background-image: url('img/dishes_1.jpg');"></a>
-            <div class="text">
-              <h3><a href="single.html">How To Cook Pasta?</a></h3>
-              <p class="sched-time">
-                <span><span class="fa fa-calendar"></span> March 01, 2023</span> <br>
-              </p>
-              <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the
-                blind texts.</p>
-              <p><a href="#" class="btn btn-primary btn-sm">Read More</a></p>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-6" data-aos="fade-up" data-aos-delay="200">
-          <div class="blog d-block">
-            <a class="bg-image d-block" href="single.html" style="background-image: url('img/dishes_2.jpg');"></a>
-            <div class="text">
-              <h3><a href="single.html">How To Cook Pasta?</a></h3>
-              <p class="sched-time">
-                <span><span class="fa fa-calendar"></span> March 01, 2023</span> <br>
-              </p>
-              <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the
-                blind texts.</p>
-              <p><a href="#" class="btn btn-primary btn-sm">Read More</a></p>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-6" data-aos="fade-up" data-aos-delay="100">
-          <div class="blog d-block">
-            <a class="bg-image d-block" href="single.html" style="background-image: url('img/dishes_3.jpg');"></a>
-            <div class="text">
-              <h3><a href="single.html">How To Cook Pasta?</a></h3>
-              <p class="sched-time">
-                <span><span class="fa fa-calendar"></span> March 01, 2023</span> <br>
-              </p>
-              <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the
-                blind texts.</p>
-              <p><a href="#" class="btn btn-primary btn-sm">Read More</a></p>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-6" data-aos="fade-up" data-aos-delay="200">
-          <div class="blog d-block">
-            <a class="bg-image d-block" href="single.html" style="background-image: url('img/dishes_4.jpg');"></a>
-            <div class="text">
-              <h3><a href="single.html">How To Cook Pasta?</a></h3>
-              <p class="sched-time">
-                <span><span class="fa fa-calendar"></span> March 01, 2023</span> <br>
-              </p>
-              <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the
-                blind texts.</p>
-              <p><a href="#" class="btn btn-primary btn-sm">Read More</a></p>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-6" data-aos="fade-up" data-aos-delay="100">
-          <div class="blog d-block">
             <a class="bg-image d-block" href="single.html" style="background-image: url('img/dishes_5.jpg');"></a>
             <div class="text">
-              <h3><a href="single.html">How To Cook Pasta?</a></h3>
+              <h3><a href="single.html">How To Cook Noodles?</a></h3>
               <p class="sched-time">
                 <span><span class="fa fa-calendar"></span> March 01, 2023</span> <br>
               </p>
@@ -158,7 +102,7 @@
           <div class="blog d-block">
             <a class="bg-image d-block" href="single.html" style="background-image: url('img/dishes_2.jpg');"></a>
             <div class="text">
-              <h3><a href="single.html">How To Cook Pasta?</a></h3>
+              <h3><a href="single.html">How To Cook French Fries?</a></h3>
               <p class="sched-time">
                 <span><span class="fa fa-calendar"></span> March 01, 2023</span> <br>
               </p>
@@ -168,6 +112,9 @@
             </div>
           </div>
         </div>
+      </div>
+      <div class="col-md-12" style="width: 30%; margin-left: 35%;">        
+        <a href="blog-2.html" class="btn btn-white btn-outline-white" style="width: 305px; background-color: #ff7404;">View more</a>
       </div>
       <!-- <div class="row mt-5" data-aos="fade-up">
         <div class="col-12 text-center">
