--- a/Chow/single.html
+++ b/Chow/single.html
@@ -66,13 +66,13 @@
   </header>
 
   <div class="slider-wrap">
-    <div class="slider-item" style="background-image: url('img/hero_1.jpg');">
+    <div class="slider-item" style="background-image: url('img/noocles-1.jpg');">
       <div class="container">
         <div class="row slider-text align-items-center justify-content-center">
           <div class="col-md-8 text-center col-sm-12 ">
-            <p class="mb-2" data-aos="fade-up">May 2, 2019 <span class="mx-3">&bullet;</span> Posted by <a href="#"
-                target="_blank">Admin</a></p>
-            <h1 data-aos="fade-up" data-aos-delay="100">How To Cook Pasta?</h1>
+            
+            <h1 data-aos="fade-up" data-aos-delay="100">How To Cook Noodles?</h1>
+            <p class="mb-2" data-aos="fade-up">The best way to cook noodles is here</p>
           </div>
         </div>
       </div>
@@ -86,7 +86,7 @@
           <h3 class="mb-4">Lorem ipsum dolor sit amet consectetur adipisicing elit</h3>
           <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Assumenda nihil aspernatur nemo
             sunt, qui, harum repudiandae quisquam eaque dolore itaque quod tenetur quo quos labore?</p>
-          <p><img src="img/dishes_1.jpg" alt="Image" class="img-fluid rounded"></p>
+          <p><img src="img/noodles.jpg" alt="Image" class="img-fluid rounded"></p>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quae expedita cumque necessitatibus ducimus
             debitis totam, quasi praesentium eveniet tempore possimus illo esse, facilis? Corrupti possimus quae ipsa
             pariatur cumque, accusantium tenetur voluptatibus incidunt reprehenderit, quidem repellat sapiente, id,
