--- a/Chow/single.html
+++ b/Chow/single.html
@@ -40,8 +40,8 @@
               <a class="nav-link" href="recipes.html">Recipes</a>
             </li>
             <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" id="dropdown04" data-toggle="dropdown"
-                aria-haspopup="true" aria-expanded="false">Services</a>
+              <a class="nav-link dropdown-toggle" href="#" id="dropdown04" data-toggle="dropdown" aria-haspopup="true"
+                aria-expanded="false">Services</a>
               <div class="dropdown-menu" aria-labelledby="dropdown04">
                 <a class="dropdown-item" href="food.html">Food Catering</a>
                 <a class="dropdown-item" href="drinks.html">Drink &amp; Beverages</a>
@@ -70,7 +70,7 @@
       <div class="container">
         <div class="row slider-text align-items-center justify-content-center">
           <div class="col-md-8 text-center col-sm-12 ">
-            
+
             <h1 data-aos="fade-up" data-aos-delay="100">How To Cook Noodles?</h1>
             <p class="mb-2" data-aos="fade-up">The best way to cook noodles is here</p>
           </div>
@@ -83,55 +83,61 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-8 blog-content">
-          <h3 class="mb-4">Lorem ipsum dolor sit amet consectetur adipisicing elit</h3>
-          <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Assumenda nihil aspernatur nemo
-            sunt, qui, harum repudiandae quisquam eaque dolore itaque quod tenetur quo quos labore?</p>
+          <h3 class="mb-4">The most delicious way to cook Noodles is</h3>
+          <p class="lead"></p>
           <p><img src="img/noodles.jpg" alt="Image" class="img-fluid rounded"></p>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quae expedita cumque necessitatibus ducimus
-            debitis totam, quasi praesentium eveniet tempore possimus illo esse, facilis? Corrupti possimus quae ipsa
-            pariatur cumque, accusantium tenetur voluptatibus incidunt reprehenderit, quidem repellat sapiente, id,
-            earum obcaecati.</p>
+          <h3 class="mb-4">If you want to make your noodles taste even better, here are some tips to make them more
+            flavorful.</h3>
           <blockquote>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Provident vero tempora aliquam excepturi
-              labore, ad soluta voluptate necessitatibus. Nulla error beatae, quam, facilis suscipit quaerat aperiam
-              minima eveniet quis placeat.</p>
+            <h4 class="mb-4">Use a flavorful broth:</h4>
+            <p>If you're making a soup-based noodle dish, use a flavorful broth as your base. You
+              can use chicken or vegetable broth or add spices like ginger, garlic, and chili flakes to enhance the
+              flavor.</p>
           </blockquote>
-          <p>Eveniet deleniti accusantium nulla natus nobis nam asperiores ipsa minima laudantium vero cumque cupiditate
-            ipsum ratione dicta, expedita quae, officiis provident harum nisi! Esse eligendi ab molestias, quod nostrum
-            hic saepe repudiandae non. Suscipit reiciendis tempora ut, saepe temporibus nemo.</p>
-          <h4 class="mt-5 mb-4">Lorem ipsum dolor sit amet consectetur adipisicing elit</h4>
-          <p>Accusamus, temporibus, ullam. Voluptate consectetur laborum totam sunt culpa repellat, dolore voluptas.
-            Quaerat cum ducimus aut distinctio sit, facilis corporis ab vel alias, voluptas aliquam, expedita molestias
-            quisquam sequi eligendi nobis ea error omnis consequatur iste deleniti illum, dolorum odit.</p>
-          <p>In adipisci corporis at delectus! Cupiditate, voluptas, in architecto odit id error reprehenderit quam
-            quibusdam excepturi distinctio dicta laborum deserunt qui labore dignissimos necessitatibus reiciendis
-            tenetur corporis quas explicabo exercitationem suscipit. Nisi quo nulla, nihil harum obcaecati vel atque
-            quos.</p>
-          <p>Amet sint explicabo maxime accusantium qui dicta enim quia, nostrum id libero voluptates quae suscipit
-            dolor quam tenetur dolores inventore illo laborum, corporis non ex, debitis quidem obcaecati! Praesentium
-            maiores illo atque error! Earum, et, fugit. Sint, delectus molestiae. Totam.</p>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Culpa iste, repudiandae facere aperiam sapiente,
-            officia delectus soluta molestiae nihil corporis animi quos ratione qui labore? Sint eaque perspiciatis
-            minus illum.</p>
-          <p>Consectetur porro odio quod iure quaerat cupiditate similique, dolor reprehenderit molestias provident,
-            esse dolorum omnis architecto magni amet corrupti neque ratione sunt beatae perspiciatis? Iste pariatur
-            omnis sed ut itaque.</p>
-          <p>Id similique, rem ipsam accusantium iusto dolores sit velit ex quas ea atque, molestiae. Sint, sed.
-            Quisquam, suscipit! Quisquam quibusdam maiores fugiat eligendi eius consequuntur, molestiae saepe commodi
-            expedita nemo!</p>
-          <div class="pt-5">
+
+          <h4 class="mb-4">Add vegetables:</h4>
+
+          <p>Vegetables like carrots, broccoli, and bell peppers can add color and flavor to your noodles. You can
+            either sauté the vegetables separately and add them to the noodles, or cook them together with the noodles
+            in the broth.</p>
+
+          <h4 class="mb-4">Add protein:</h4>
+
+          <p>Adding protein like shrimp, chicken, or tofu can make your noodles more filling and flavorful. You can
+            sauté the protein separately and add it to the noodles, or cook it together with the noodles in the broth.
+          </p>
+
+          <h4 class="mb-4">Use flavorful sauces:</h4>
+
+          <p>You can use a variety of sauces to flavor your noodles, such as soy sauce, hoisin sauce, or oyster sauce.
+            Experiment with different combinations to find your favorite flavor.</p>
+
+          <h4 class="mb-4">Top with fresh herbs:</h4>
+
+          <p>Fresh herbs like cilantro, basil, and green onions can add a pop of freshness to your noodles. Sprinkle
+            them on top of your finished dish for added flavor and color.</p>
+
+          <h4 class="mb-4">Experiment with spices:</h4>
+
+          <p>Don't be afraid to experiment with spices like cumin, paprika, or turmeric to add extra flavor to your
+            noodles. Add them to the broth or sauce to infuse the flavors throughout the dish.</p>
+
+          <p>By following these tips, you can make your noodles taste even better and more flavorful. Enjoy!</p>
+
+          
+        <!--  <div class="pt-5">
             <p>Categories: <a href="#">Design</a>, <a href="#">Events</a> Tags: <a href="#">#html</a>, <a
                 href="#">#trends</a></p>
-          </div>
+          </div> --> <br>
           <div class="pt-5">
-            <h3 class="mb-5">6 Comments</h3>
+            <h3 class="mb-5">Comments</h3>
             <ul class="comment-list">
               <li class="comment">
                 <div class="vcard bio">
-                  <img src="img/person_2.jpg" alt="Image placeholder">
+                  <img src="img/dummy-image.jpg" alt="Image placeholder">
                 </div>
                 <div class="comment-body">
-                  <h3>Jacob Smith</h3>
+                  <h3>Ankit</h3>
                   <div class="meta">January 9, 2018 at 2:21pm</div>
                   <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur quidem laborum necessitatibus,
                     ipsam impedit vitae autem, eum officia, fugiat saepe enim sapiente iste iure! Quam voluptas earum
@@ -141,10 +147,10 @@
               </li>
               <li class="comment">
                 <div class="vcard bio">
-                  <img src="img/person_3.jpg" alt="Image placeholder">
+                  <img src="img/Dummy-Frau.jpg" alt="Image placeholder">
                 </div>
                 <div class="comment-body">
-                  <h3>Chris Meyer</h3>
+                  <h3>Shresta</h3>
                   <div class="meta">January 9, 2018 at 2:21pm</div>
                   <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur quidem laborum necessitatibus,
                     ipsam impedit vitae autem, eum officia, fugiat saepe enim sapiente iste iure! Quam voluptas earum
@@ -154,10 +160,10 @@
                 <ul class="children">
                   <li class="comment">
                     <div class="vcard bio">
-                      <img src="img/person_2.jpg" alt="Image placeholder">
+                      <img src="img/dummy-image.jpg" alt="Image placeholder">
                     </div>
                     <div class="comment-body">
-                      <h3>Chintan Patel</h3>
+                      <h3>Chetan Patel</h3>
                       <div class="meta">January 9, 2018 at 2:21pm</div>
                       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur quidem laborum
                         necessitatibus, ipsam impedit vitae autem, eum officia, fugiat saepe enim sapiente iste iure!
@@ -167,10 +173,10 @@
                     <ul class="children">
                       <li class="comment">
                         <div class="vcard bio">
-                          <img src="img/person_1.jpg" alt="Image placeholder">
+                          <img src="img/dummy-image.jpg" alt="Image placeholder">
                         </div>
                         <div class="comment-body">
-                          <h3>Jean Doe</h3>
+                          <h3>Dheeraj</h3>
                           <div class="meta">January 9, 2018 at 2:21pm</div>
                           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur quidem laborum
                             necessitatibus, ipsam impedit vitae autem, eum officia, fugiat saepe enim sapiente iste
@@ -180,10 +186,10 @@
                         <ul class="children">
                           <li class="comment">
                             <div class="vcard bio">
-                              <img src="img/person_2.jpg" alt="Image placeholder">
+                              <img src="img/Dummy-Frau.jpg" alt="Image placeholder">
                             </div>
                             <div class="comment-body">
-                              <h3>Ben Afflick</h3>
+                              <h3>Beena</h3>
                               <div class="meta">January 9, 2018 at 2:21pm</div>
                               <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur quidem laborum
                                 necessitatibus, ipsam impedit vitae autem, eum officia, fugiat saepe enim sapiente iste
@@ -199,10 +205,10 @@
               </li>
               <li class="comment">
                 <div class="vcard bio">
-                  <img src="img/person_1.jpg" alt="Image placeholder">
+                  <img src="img/Dummy-Frau.jpg" alt="Image placeholder">
                 </div>
                 <div class="comment-body">
-                  <h3>Jean Doe</h3>
+                  <h3>Prachi</h3>
                   <div class="meta">January 9, 2018 at 2:21pm</div>
                   <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur quidem laborum necessitatibus,
                     ipsam impedit vitae autem, eum officia, fugiat saepe enim sapiente iste iure! Quam voluptas earum
@@ -304,7 +310,8 @@
         <div class="col-md-4 mb-5">
           <h3>About Us</h3>
           <p class="mb-5">We're a team of passionate foodies dedicated to delivering an exceptional dining experience to
-            every guest. Our story began with a vision to create a restaurant that celebrates the art of cooking and hospitality.</p>
+            every guest. Our story began with a vision to create a restaurant that celebrates the art of cooking and
+            hospitality.</p>
           <ul class="list-unstyled footer-link d-flex footer-social">
             <li><a href="#" class="p-2"><span class="fa fa-twitter"></span></a></li>
             <li><a href="#" class="p-2"><span class="fa fa-facebook"></span></a></li>
@@ -325,7 +332,8 @@
                 <span>Bangalore, Karnataka</span>
               </li>
               <li class="d-block"><span class="d-block text-black">Phone:</span><span>+91 963 230 5984</span></li>
-              <li class="d-block"><span class="d-block text-black">Email:</span><span>pradeepl220220@gmail.com</span></li>
+              <li class="d-block"><span class="d-block text-black">Email:</span><span>pradeepl220220@gmail.com</span>
+              </li>
             </ul>
           </div>
         </div>
